cmake_minimum_required(VERSION 3.17)
project(Plantilla_A1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej1 Ej1.cpp)
add_executable(Ej2 Ej2.cpp)
add_executable(Ej3 Ej3.cpp)
add_executable(Ej6 ej6.cpp)
add_executable(EJ4 ej4.cpp)
add_executable(Ej5 ej5.cpp)
add_executable(Ej7 ej7.cpp)
add_executable(practica practica.cpp)
